--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1,3 +1,4 @@
+@import url(https://fonts.googleapis.com/css?family=Dancing+Script:400,500,600,700&display=swap);
 @import url(https://fonts.googleapis.com/css?family=Poppins:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i&display=swap);
 
 
@@ -8,12 +9,12 @@ body {
   font-family: IBM Plex Sans;
 }
 .display-1 {
-  font-family: 'Poppins', sans-serif;
-  font-size: 4rem;
+  font-family: 'Dancing Script', handwriting;
+  font-size: 2.6rem;
   line-height: 1.1;
 }
 .display-1 > .mbr-iconfont {
-  font-size: 5rem;
+  font-size: 3.25rem;
 }
 .display-2 {
   font-family: 'Poppins', sans-serif;
@@ -33,11 +34,11 @@ body {
 }
 .display-5 {
   font-family: 'Poppins', sans-serif;
-  font-size: 1.3rem;
+  font-size: 1.4rem;
   line-height: 1.5;
 }
 .display-5 > .mbr-iconfont {
-  font-size: 1.625rem;
+  font-size: 1.75rem;
 }
 .display-7 {
   font-family: 'Poppins', sans-serif;
@@ -54,14 +55,14 @@ body {
 /* 0.65 - min scale variable, may vary */
 @media (max-width: 992px) {
   .display-1 {
-    font-size: 3.2rem;
+    font-size: 2.08rem;
   }
 }
 @media (max-width: 768px) {
   .display-1 {
-    font-size: 2.8rem;
-    font-size: calc( 2.05rem + (4 - 2.05) * ((100vw - 20rem) / (48 - 20)));
-    line-height: calc( 1.1 * (2.05rem + (4 - 2.05) * ((100vw - 20rem) / (48 - 20))));
+    font-size: 1.82rem;
+    font-size: calc( 1.56rem + (2.6 - 1.56) * ((100vw - 20rem) / (48 - 20)));
+    line-height: calc( 1.1 * (1.56rem + (2.6 - 1.56) * ((100vw - 20rem) / (48 - 20))));
   }
   .display-2 {
     font-size: 1.76rem;
@@ -74,9 +75,9 @@ body {
     line-height: calc( 1.4 * (1.105rem + (1.3 - 1.105) * ((100vw - 20rem) / (48 - 20))));
   }
   .display-5 {
-    font-size: 1.04rem;
-    font-size: calc( 1.105rem + (1.3 - 1.105) * ((100vw - 20rem) / (48 - 20)));
-    line-height: calc( 1.4 * (1.105rem + (1.3 - 1.105) * ((100vw - 20rem) / (48 - 20))));
+    font-size: 1.12rem;
+    font-size: calc( 1.14rem + (1.4 - 1.14) * ((100vw - 20rem) / (48 - 20)));
+    line-height: calc( 1.4 * (1.14rem + (1.4 - 1.14) * ((100vw - 20rem) / (48 - 20))));
   }
   .display-7 {
     font-size: 0.88rem;
@@ -710,73 +711,73 @@ body {
 a {
   transition: color 0.6s;
 }
-.cid-soxkCDYT6I {
+.cid-soJC5FpJeE {
   padding-top: 6rem;
-  padding-bottom: 4rem;
+  padding-bottom: 0rem;
   background-color: #ffffff;
 }
-.cid-soxkCDYT6I .mbr-overlay {
+.cid-soJC5FpJeE .mbr-overlay {
   z-index: 1;
 }
 @media (min-width: 992px) {
-  .cid-soxkCDYT6I .carousel {
-    min-height: 800px;
+  .cid-soJC5FpJeE .carousel {
+    min-height: 700px;
   }
-  .cid-soxkCDYT6I .carousel img {
-    max-height: 800px;
+  .cid-soJC5FpJeE .carousel img {
+    max-height: 700px;
     object-fit: contain;
   }
 }
 @media (max-width: 991px) and (min-width: 768px) {
-  .cid-soxkCDYT6I .carousel {
-    min-height: 520px;
+  .cid-soJC5FpJeE .carousel {
+    min-height: 455px;
   }
-  .cid-soxkCDYT6I .carousel img {
-    max-height: 520px;
+  .cid-soJC5FpJeE .carousel img {
+    max-height: 455px;
     object-fit: contain;
   }
 }
 @media (max-width: 767px) {
-  .cid-soxkCDYT6I .carousel {
-    min-height: 440px;
+  .cid-soJC5FpJeE .carousel {
+    min-height: 385px;
   }
-  .cid-soxkCDYT6I .carousel img {
-    max-height: 440px;
+  .cid-soJC5FpJeE .carousel img {
+    max-height: 385px;
     object-fit: contain;
   }
-  .cid-soxkCDYT6I .container .carousel-control {
+  .cid-soJC5FpJeE .container .carousel-control {
     margin-bottom: 0;
   }
-  .cid-soxkCDYT6I .content-slider-wrap {
+  .cid-soJC5FpJeE .content-slider-wrap {
     width: 100% !important;
   }
 }
-.cid-soxkCDYT6I .carousel,
-.cid-soxkCDYT6I .carousel-inner {
+.cid-soJC5FpJeE .carousel,
+.cid-soJC5FpJeE .carousel-inner {
   display: flex;
   align-items: center;
 }
-.cid-soxkCDYT6I .item-wrapper {
+.cid-soJC5FpJeE .item-wrapper {
   width: 100%;
 }
-.cid-soxkCDYT6I .carousel-caption {
+.cid-soJC5FpJeE .carousel-caption {
   bottom: 40px;
 }
-.cid-soxkCDYT6I .carousel-control:hover {
+.cid-soJC5FpJeE .carousel-control:hover {
   background: #1b1b1b;
   color: #fff;
   opacity: 1;
 }
-.cid-soxkCDYT6I .mobi-mbri-arrow-next {
+.cid-soJC5FpJeE .mobi-mbri-arrow-next {
   margin-left: 5px;
 }
-.cid-soxkCDYT6I .mobi-mbri-arrow-prev {
+.cid-soJC5FpJeE .mobi-mbri-arrow-prev {
   margin-right: 5px;
 }
-.cid-soxkCDYT6I .container .carousel-indicators {
+.cid-soJC5FpJeE .container .carousel-indicators {
   margin-bottom: 3px;
 }
-.cid-soxkCDYT6I .carousel-control {
+.cid-soJC5FpJeE .carousel-control {
   top: 50%;
   width: 60px;
   height: 60px;
@@ -787,26 +788,26 @@ a {
   border-radius: 50%;
   transition: all 0.3s;
 }
-.cid-soxkCDYT6I .carousel-control.carousel-control-prev {
+.cid-soJC5FpJeE .carousel-control.carousel-control-prev {
   left: 0;
   margin-left: 2.5rem;
 }
-.cid-soxkCDYT6I .carousel-control.carousel-control-next {
+.cid-soJC5FpJeE .carousel-control.carousel-control-next {
   right: 0;
   margin-right: 2.5rem;
 }
 @media (max-width: 767px) {
-  .cid-soxkCDYT6I .carousel-control {
+  .cid-soJC5FpJeE .carousel-control {
     top: auto;
     bottom: 1rem;
   }
 }
-.cid-soxkCDYT6I .carousel-indicators {
+.cid-soJC5FpJeE .carousel-indicators {
   position: absolute;
   bottom: 0;
   margin-bottom: 1.5rem !important;
 }
-.cid-soxkCDYT6I .carousel-indicators li {
+.cid-soJC5FpJeE .carousel-indicators li {
   max-width: 15px;
   height: 15px;
   width: 15px;
@@ -818,15 +819,15 @@ a {
   opacity: 0.5;
   transition: all 0.3s;
 }
-.cid-soxkCDYT6I .carousel-indicators li.active,
-.cid-soxkCDYT6I .carousel-indicators li:hover {
+.cid-soJC5FpJeE .carousel-indicators li.active,
+.cid-soJC5FpJeE .carousel-indicators li:hover {
   opacity: 0.9;
 }
-.cid-soxkCDYT6I .carousel-indicators li::after,
-.cid-soxkCDYT6I .carousel-indicators li::before {
+.cid-soJC5FpJeE .carousel-indicators li::after,
+.cid-soJC5FpJeE .carousel-indicators li::before {
   content: none;
 }
-.cid-soxkCDYT6I .carousel-indicators.ie-fix {
+.cid-soJC5FpJeE .carousel-indicators.ie-fix {
   left: 50%;
   display: block;
   width: 60%;
@@ -834,7 +835,7 @@ a {
   text-align: center;
 }
 @media (max-width: 768px) {
-  .cid-soxkCDYT6I .carousel-indicators {
+  .cid-soJC5FpJeE .carousel-indicators {
     display: none !important;
   }
 }
@@ -850,142 +851,13 @@ a {
 .cid-snRN3LC6ci .mbr-section-subtitle {
   color: #ffffff;
 }
-.cid-soxni0wKi8 {
-  padding-top: 2rem;
-  padding-bottom: 1rem;
-  background-color: #ffffff;
-}
 .cid-soxni0wKi8 .mbr-section-title {
   color: #65c6d4;
   text-align: center;
 }
 .cid-soxni0wKi8 .mbr-section-subtitle {
-  text-align: justify;
-}
-.cid-sn1sadLL0K {
-  padding-top: 0rem;
-  padding-bottom: 0rem;
-  background-color: #ffffff;
-}
-.cid-sn1sadLL0K .content-wrapper {
-  background: #ffffff;
-}
-@media (max-width: 991px) {
-  .cid-sn1sadLL0K .content-wrapper .row {
-    flex-direction: column-reverse;
-  }
-  .cid-sn1sadLL0K .content-wrapper .image-wrapper {
-    margin-bottom: 2rem;
-  }
-}
-@media (max-width: 767px) {
-  .cid-sn1sadLL0K .content-wrapper {
-    padding: 1rem;
-  }
-}
-@media (min-width: 768px) and (max-width: 991px) {
-  .cid-sn1sadLL0K .content-wrapper {
-    padding: 2rem;
-  }
-}
-@media (min-width: 992px) {
-  .cid-sn1sadLL0K .content-wrapper {
-    padding: 5rem 3rem;
-  }
-  .cid-sn1sadLL0K .content-wrapper .text-wrapper {
-    padding-right: 2rem;
-  }
-}
-.cid-sn1sadLL0K .image-wrapper img {
-  width: 100%;
-  object-fit: cover;
-}
-.cid-sn1sadLL0K .mbr-text,
-.cid-sn1sadLL0K .mbr-section-btn {
   text-align: left;
-  color: #232323;
-}
-.cid-sn1sadLL0K .card-title {
-  color: #40b0bf;
-  text-align: center;
-}
-.cid-sn1hvEnnDx {
-  padding-top: 3rem;
-  padding-bottom: 4rem;
-  background: #40b0bf;
-}
-.cid-sn1hvEnnDx .team-card {
-  margin-bottom: 2rem;
-  transition: all 0.3s;
-}
-.cid-sn1hvEnnDx .team-card:hover {
-  transform: translateY(-10px);
-}
-.cid-sn1hvEnnDx .card-wrap {
-  background: #000000;
-  border-radius: 4px;
-}
-@media (max-width: 991px) {
-  .cid-sn1hvEnnDx .card-wrap {
-    margin-bottom: 2rem;
-  }
-}
-.cid-sn1hvEnnDx .card-wrap .image-wrap img {
-  width: 100%;
-}
-@media (min-width: 768px) {
-  .cid-sn1hvEnnDx .card-wrap .content-wrap {
-    padding: 2rem;
-  }
-}
-@media (max-width: 767px) {
-  .cid-sn1hvEnnDx .card-wrap .content-wrap {
-    padding: 1rem;
-  }
-}
-.cid-sn1hvEnnDx .social-row {
-  text-align: center;
-}
-.cid-sn1hvEnnDx .social-row .soc-item {
-  display: inline-block;
-  text-align: center;
-  border-radius: 50%;
-  margin-right: 0.6rem;
-  margin-bottom: 1rem;
-  padding: 0.5rem;
-  border: 2px solid #000000;
-  transition: all 0.3s;
-}
-.cid-sn1hvEnnDx .social-row .soc-item .mbr-iconfont {
-  transition: all 0.3s;
-  display: flex;
-  justify-content: center;
-  align-content: center;
-  color: #000000;
-  font-size: 1.5rem;
-}
-.cid-sn1hvEnnDx .social-row .soc-item:hover {
-  background-color: #000000;
-}
-.cid-sn1hvEnnDx .social-row .soc-item:hover .mbr-iconfont {
   color: #ffffff;
-}
-.cid-sn1hvEnnDx .card-text,
-.cid-sn1hvEnnDx .mbr-section-btn,
-.cid-sn1hvEnnDx .social-row {
-  text-align: center;
-  color: #000000;
-}
-.cid-sn1hvEnnDx .card-title,
-.cid-sn1hvEnnDx .social-row {
-  color: #2299aa;
-}
-.cid-sn1hvEnnDx .mbr-section-title {
-  color: #ffffff;
-}
-.cid-sn1hvEnnDx .mbr-section-subtitle {
-  text-align: center;
-  color: #000000;
 }
 .cid-s48OLK6784 {
   z-index: 1000;
@@ -1592,7 +1464,7 @@ a {
 }
 .cid-snGgX363EB {
   padding-top: 2rem;
-  padding-bottom: 2rem;
+  padding-bottom: 4rem;
   background-color: #65c6d4;
 }
 .cid-snGgX363EB .carousel-item {
@@ -1646,7 +1518,7 @@ a {
   color: #ffffff;
 }
 .cid-snGgX363EB .user_text {
-  text-align: center;
+  text-align: left;
   color: #000000;
 }
 .cid-snGgX363EB .user_name {
