--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1,4 +1,4 @@
-@import url(https://fonts.googleapis.com/css?family=Dancing+Script:400,500,600,700&display=swap);
+@import url(https://fonts.googleapis.com/css?family=Caveat:400,500,600,700&display=swap);
 @import url(https://fonts.googleapis.com/css?family=Poppins:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i&display=swap);
 
 
@@ -9,7 +9,7 @@ body {
   font-family: IBM Plex Sans;
 }
 .display-1 {
-  font-family: 'Dancing Script', handwriting;
+  font-family: 'Caveat', handwriting;
   font-size: 2.6rem;
   line-height: 1.1;
 }
@@ -88,19 +88,19 @@ body {
 /* Buttons */
 .btn {
   padding: 0.6rem 1.2rem;
-  border-radius: 50px;
+  border-radius: 100px;
 }
 .btn-sm {
   padding: 0.6rem 1.2rem;
-  border-radius: 50px;
+  border-radius: 100px;
 }
 .btn-md {
   padding: 0.6rem 1.2rem;
-  border-radius: 50px;
+  border-radius: 100px;
 }
 .btn-lg {
   padding: 1rem 2.6rem;
-  border-radius: 50px;
+  border-radius: 100px;
 }
 .bg-primary {
   background-color: #40b0bf !important;
@@ -711,73 +711,55 @@ body {
 a {
   transition: color 0.6s;
 }
-.cid-soJC5FpJeE {
-  padding-top: 6rem;
-  padding-bottom: 0rem;
-  background-color: #ffffff;
+.cid-spQMTyf6of {
+  padding-top: 0;
+  padding-bottom: 0;
+  background-color: #fafafa;
 }
-.cid-soJC5FpJeE .mbr-overlay {
-  z-index: 1;
-}
-@media (min-width: 992px) {
-  .cid-soJC5FpJeE .carousel {
-    min-height: 700px;
-  }
-  .cid-soJC5FpJeE .carousel img {
-    max-height: 700px;
-    object-fit: contain;
-  }
-}
-@media (max-width: 991px) and (min-width: 768px) {
-  .cid-soJC5FpJeE .carousel {
-    min-height: 455px;
-  }
-  .cid-soJC5FpJeE .carousel img {
-    max-height: 455px;
-    object-fit: contain;
-  }
-}
-@media (max-width: 767px) {
-  .cid-soJC5FpJeE .carousel {
-    min-height: 385px;
-  }
-  .cid-soJC5FpJeE .carousel img {
-    max-height: 385px;
-    object-fit: contain;
-  }
-  .cid-soJC5FpJeE .container .carousel-control {
-    margin-bottom: 0;
-  }
-  .cid-soJC5FpJeE .content-slider-wrap {
-    width: 100% !important;
-  }
-}
-.cid-soJC5FpJeE .carousel,
-.cid-soJC5FpJeE .carousel-inner {
-  display: flex;
-  align-items: center;
-}
-.cid-soJC5FpJeE .item-wrapper {
+.cid-spQMTyf6of .carousel {
   width: 100%;
 }
-.cid-soJC5FpJeE .carousel-caption {
+.cid-spQMTyf6of .carousel-inner {
+  display: flex;
+  align-content: center;
+  align-items: center;
+}
+.cid-spQMTyf6of .carousel-item img {
+  height: 100vh;
+  object-fit: cover;
+}
+.cid-spQMTyf6of .mbr-overlay {
+  z-index: 1;
+}
+.cid-spQMTyf6of .carousel-caption {
   bottom: 40px;
 }
-.cid-soJC5FpJeE .carousel-control:hover {
+.cid-spQMTyf6of .mobi-mbri-arrow-next {
+  margin-left: 5px;
+}
+.cid-spQMTyf6of .mobi-mbri-arrow-prev {
+  margin-right: 5px;
+}
+.cid-spQMTyf6of .carousel-control:hover {
   background: #1b1b1b;
   color: #fff;
   opacity: 1;
 }
-.cid-soJC5FpJeE .mobi-mbri-arrow-next {
-  margin-left: 5px;
+.cid-spQMTyf6of .item-wrapper {
+  width: 100%;
 }
-.cid-soJC5FpJeE .mobi-mbri-arrow-prev {
-  margin-right: 5px;
+@media (max-width: 767px) {
+  .cid-spQMTyf6of .container .carousel-control {
+    margin-bottom: 0;
+  }
+  .cid-spQMTyf6of .content-slider-wrap {
+    width: 100% !important;
+  }
 }
-.cid-soJC5FpJeE .container .carousel-indicators {
+.cid-spQMTyf6of .container .carousel-indicators {
   margin-bottom: 3px;
 }
-.cid-soJC5FpJeE .carousel-control {
+.cid-spQMTyf6of .carousel-control {
   top: 50%;
   width: 60px;
   height: 60px;
@@ -788,26 +770,26 @@ a {
   border-radius: 50%;
   transition: all 0.3s;
 }
-.cid-soJC5FpJeE .carousel-control.carousel-control-prev {
+.cid-spQMTyf6of .carousel-control.carousel-control-prev {
   left: 0;
   margin-left: 2.5rem;
 }
-.cid-soJC5FpJeE .carousel-control.carousel-control-next {
+.cid-spQMTyf6of .carousel-control.carousel-control-next {
   right: 0;
   margin-right: 2.5rem;
 }
 @media (max-width: 767px) {
-  .cid-soJC5FpJeE .carousel-control {
+  .cid-spQMTyf6of .carousel-control {
     top: auto;
     bottom: 1rem;
   }
 }
-.cid-soJC5FpJeE .carousel-indicators {
+.cid-spQMTyf6of .carousel-indicators {
   position: absolute;
   bottom: 0;
   margin-bottom: 1.5rem !important;
 }
-.cid-soJC5FpJeE .carousel-indicators li {
+.cid-spQMTyf6of .carousel-indicators li {
   max-width: 15px;
   height: 15px;
   width: 15px;
@@ -819,15 +801,15 @@ a {
   opacity: 0.5;
   transition: all 0.3s;
 }
-.cid-soJC5FpJeE .carousel-indicators li.active,
-.cid-soJC5FpJeE .carousel-indicators li:hover {
+.cid-spQMTyf6of .carousel-indicators li.active,
+.cid-spQMTyf6of .carousel-indicators li:hover {
   opacity: 0.9;
 }
-.cid-soJC5FpJeE .carousel-indicators li::after,
-.cid-soJC5FpJeE .carousel-indicators li::before {
+.cid-spQMTyf6of .carousel-indicators li::after,
+.cid-spQMTyf6of .carousel-indicators li::before {
   content: none;
 }
-.cid-soJC5FpJeE .carousel-indicators.ie-fix {
+.cid-spQMTyf6of .carousel-indicators.ie-fix {
   left: 50%;
   display: block;
   width: 60%;
@@ -835,14 +817,14 @@ a {
   text-align: center;
 }
 @media (max-width: 768px) {
-  .cid-soJC5FpJeE .carousel-indicators {
+  .cid-spQMTyf6of .carousel-indicators {
     display: none !important;
   }
 }
 .cid-snRN3LC6ci {
-  padding-top: 10rem;
-  padding-bottom: 10rem;
-  background-image: url("../../../assets/images/hero-image-6-1900x1425.jpeg");
+  padding-top: 8rem;
+  padding-bottom: 4rem;
+  background-image: url("../../../assets/images/hero-image-6-2000x1500.jpeg");
 }
 .cid-snRN3LC6ci .mbr-section-title {
   color: #65c6d4;
@@ -851,13 +833,16 @@ a {
 .cid-snRN3LC6ci .mbr-section-subtitle {
   color: #ffffff;
 }
+.cid-soxni0wKi8 {
+  background-color: #65c6d4;
+}
 .cid-soxni0wKi8 .mbr-section-title {
-  color: #65c6d4;
+  color: #ffffff;
   text-align: center;
 }
 .cid-soxni0wKi8 .mbr-section-subtitle {
   text-align: left;
-  color: #ffffff;
+  color: #343434;
 }
 .cid-s48OLK6784 {
   z-index: 1000;
@@ -1208,12 +1193,7 @@ a {
   padding-bottom: 2rem;
 }
 .cid-snGop6KSIR .item-wrapper {
-  height: 300px;
   position: relative;
-}
-.cid-snGop6KSIR .item-wrapper img {
-  height: 100%;
-  object-fit: cover;
 }
 .cid-snGop6KSIR .item-wrapper .icon-wrapper {
   pointer-events: none;
