--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -842,7 +842,7 @@ a {
 }
 .cid-soxni0wKi8 .mbr-section-subtitle {
   text-align: left;
-  color: #343434;
+  color: #fafafa;
 }
 .cid-s48OLK6784 {
   z-index: 1000;
@@ -1499,7 +1499,7 @@ a {
 }
 .cid-snGgX363EB .user_text {
   text-align: left;
-  color: #000000;
+  color: #fafafa;
 }
 .cid-snGgX363EB .user_name {
   color: #ffffff;
